--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My Simple Webpage</h1>
+    <h1>Welcome to RBVR IT SOLUTIONS</h1>
     <nav>
       <ul>
         <li><a href="#home">Home</a></li>
@@ -25,7 +25,7 @@
 
   <section id="about">
     <h2>About</h2>
-    <p>About section content goes here. Describe yourself or your webpage.</p>
+    <p>Aim for rapid growth and scalability, leveraging innovation and technology to disrupt existing markets or create new ones.</p>
   </section>
 
   <section id="contact">
